# isosec

./: README.md
client/AuditClientCPP/: AuditClientCPP.kdev4  CMakeLists.txt  README
client/AuditClientCPP/.kdev4/: AuditClientCPP.kdev4
client/AuditClientCPP/src/: app.cpp  app.h  auditclientcpp.cpp  auditclientcpp.h  auditclientcpp.ui  httpclient.cpp  httpclient.h  main.cpp
conf/: server-app.ini
db/: cleanup.mysql.sql  createschema.mysql.sql  install-mysql.sh  privilleges.mysql.sql  schema.mysql.sql  seed-data.sql
server/: index.php
